RAIN-6826 : BND Download channel issue fix and help icons alignmanet issue fixed (#2585)

--- a/frontend/mono-ui/web/rainmaker/dev-packages/egov-bnd-dev/src/ui-config/screens/specs/birth-common/birthSearchResources/index.scss
+++ b/frontend/mono-ui/web/rainmaker/dev-packages/egov-bnd-dev/src/ui-config/screens/specs/birth-common/birthSearchResources/index.scss
@@ -15,7 +15,7 @@
 
     .bd-search-header{
       #custom-atoms-headerDiv{
-        flex-flow:row;
+        flex-flow:inherit;
         }
     }
     .bd-btn-hiw{
@@ -25,7 +25,7 @@
         max-width:unset;
         flex-basis: unset;
   button{
-  min-width: none;
+  min-width: unset!important;
   }
       }
     }
